Added Jarfiles for JAX-RS 2.0 client REST run to library

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,14 +34,60 @@ dist.jar=${dist.dir}/JavaFXApplicationCustomerSearch.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.asm-all-repackaged-2.1.88.jar=/Applications/netbeans/lib/asm-all-repackaged-2.1.88.jar
+file.reference.cglib-2.1.88.jar=/Applications/netbeans/lib/cglib-2.1.88.jar
 file.reference.derbyclient.jar=/Users/ASW/db-derby-10.14.2.0-bin/lib/derbyclient.jar
+file.reference.guava-14.0.1.jar=/Applications/netbeans/lib/guava-14.0.1.jar
+file.reference.hk2-api-2.1.88.jar=/Applications/netbeans/lib/hk2-api-2.1.88.jar
+file.reference.hk2-locator-2.1.88.jar=/Applications/netbeans/lib/hk2-locator-2.1.88.jar
+file.reference.hk2-utils-2.1.88.jar=/Applications/netbeans/lib/hk2-utils-2.1.88.jar
+file.reference.javax.annotation-api-1.2.jar=/Applications/netbeans/lib/javax.annotation-api-1.2.jar
+file.reference.javax.inject-2.1.88.jar=/Applications/netbeans/lib/javax.inject-2.1.88.jar
+file.reference.javax.json-1.0.1.jar=/Applications/netbeans/lib/javax.json-1.0.1.jar
+file.reference.javax.servlet-api-3.1.0.jar=/Applications/netbeans/lib/javax.servlet-api-3.1.0.jar
+file.reference.javax.ws.rs-api-2.0.jar=/Applications/netbeans/lib/javax.ws.rs-api-2.0.jar
+file.reference.jaxb-api-2.2.7.jar=/Applications/netbeans/lib/jaxb-api-2.2.7.jar
+file.reference.jersey-client.jar=/Applications/netbeans/lib/jersey-client.jar
+file.reference.jersey-common.jar=/Applications/netbeans/lib/jersey-common.jar
+file.reference.jersey-container-servlet-core.jar=/Applications/netbeans/lib/jersey-container-servlet-core.jar
+file.reference.jersey-container-servlet.jar=/Applications/netbeans/lib/jersey-container-servlet.jar
+file.reference.jersey-media-json-processing-2.0.jar=/Applications/netbeans/lib/jersey-media-json-processing-2.0.jar
+file.reference.jersey-server.jar=/Applications/netbeans/lib/jersey-server.jar
+file.reference.jsonp-jaxrs-1.0.jar=/Applications/netbeans/lib/jsonp-jaxrs-1.0.jar
+file.reference.org.osgi.core-4.2.0.jar=/Applications/netbeans/lib/org.osgi.core-4.2.0.jar
+file.reference.osgi-resource-locator-1.0.1.jar=/Applications/netbeans/lib/osgi-resource-locator-1.0.1.jar
+file.reference.persistence-api-1.0.jar=/Applications/netbeans/lib/persistence-api-1.0.jar
+file.reference.validation-api-1.1.0.Final.jar=/Applications/netbeans/lib/validation-api-1.1.0.Final.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.derbyclient.jar}
+    ${file.reference.derbyclient.jar}:\
+    ${file.reference.asm-all-repackaged-2.1.88.jar}:\
+    ${file.reference.cglib-2.1.88.jar}:\
+    ${file.reference.guava-14.0.1.jar}:\
+    ${file.reference.hk2-api-2.1.88.jar}:\
+    ${file.reference.hk2-locator-2.1.88.jar}:\
+    ${file.reference.hk2-utils-2.1.88.jar}:\
+    ${file.reference.javax.annotation-api-1.2.jar}:\
+    ${file.reference.javax.inject-2.1.88.jar}:\
+    ${file.reference.javax.json-1.0.1.jar}:\
+    ${file.reference.javax.servlet-api-3.1.0.jar}:\
+    ${file.reference.javax.ws.rs-api-2.0.jar}:\
+    ${file.reference.jaxb-api-2.2.7.jar}:\
+    ${file.reference.jersey-client.jar}:\
+    ${file.reference.jersey-common.jar}:\
+    ${file.reference.jersey-container-servlet-core.jar}:\
+    ${file.reference.jersey-container-servlet.jar}:\
+    ${file.reference.jersey-media-json-processing-2.0.jar}:\
+    ${file.reference.jersey-server.jar}:\
+    ${file.reference.jsonp-jaxrs-1.0.jar}:\
+    ${file.reference.org.osgi.core-4.2.0.jar}:\
+    ${file.reference.osgi-resource-locator-1.0.1.jar}:\
+    ${file.reference.persistence-api-1.0.jar}:\
+    ${file.reference.validation-api-1.1.0.Final.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
